# RayTracing

./: CMakeLists.txt  README.md
include/: camera.h  color.h  constants.h  dielectric.h  hittable.h  hittable_list.h  lambertian.h  material.h  metal.h  ray.h  sphere.h  utils.h  vec3.h
include/shape/: sphere.h
src/: camera.cpp  color.cpp  color_test.cpp  dielectric.cpp  hittable_list.cpp  lambertian.cpp  metal.cpp  sphere.cpp  vec3.cpp
src/shape/: sphere.cpp
